# snowbot

./: .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  update_zapret.sh
src/: boyer-moore.c  boyer-moore.h  config.h  convert.c  convert.h  derail.c  derail.h  entities.c  entities.h  hashtable.c  hashtable.h  http.c  http.h  irc.c  irc.h  irc_bookmarks.c  irc_bookmarks.h  irc_commands.c  irc_commands.h  irc_commands_weather.c  irc_commands_weather.h  irc_common.c  irc_common.h  irc_proto.c  irc_proto.h  irc_short.c  irc_short.h  irc_user.c  irc_user.h  irc_watch.c  irc_watch.h  main.c  paste.c  paste.h  pwdhash.c  pwdhash.h  resolve.c  resolve.h  savefile.c  savefile.h  (+6 more)
